[gd_scene load_steps=6 format=2]

[ext_resource path="res://TopDownShootGame/Common/Explosive.tscn" type="PackedScene" id=1]
[ext_resource path="res://NixLib/Common/Effect2DGenerator.gd" type="Script" id=2]
[ext_resource path="res://NixLib/Shoot/bullet.gd" type="Script" id=3]
[ext_resource path="res://TopDownShootGame/Image/Projectile/towerDefense_tile298.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 4.314

[node name="projectile" type="Area2D"]
input_pickable = false
collision_layer = 3
collision_mask = 2
script = ExtResource( 3 )
damage = 1.0
max_distance_travelled = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1.2, 1.5, 1.5, 1 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Effect2DGenerator" type="Node2D" parent="."]
script = ExtResource( 2 )
efx = ExtResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_projectile_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_projectile_body_entered"]
